--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <div class="products-item-weight">360 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -126,7 +126,7 @@
                         <div class="products-item-weight">390 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -164,7 +164,7 @@
                         <div class="products-item-weight">420 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -202,7 +202,7 @@
                         <div class="products-item-weight">220 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -240,7 +240,7 @@
                         <div class="products-item-weight">220 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -278,7 +278,7 @@
                         <div class="products-item-weight">320 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -317,7 +317,7 @@
                         <div class="products-item-weight">280 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -355,7 +355,7 @@
                         <div class="products-item-weight">380 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -393,7 +393,7 @@
                         <div class="products-item-weight">400 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -432,7 +432,7 @@
                         <div class="products-item-weight">300 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -470,7 +470,7 @@
                         <div class="products-item-weight">320 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
@@ -508,7 +508,7 @@
                         <div class="products-item-weight">360 гр</div>
                     </div>
                     <div class="products-item-action">
-                        <button class="button">
+                        <button class="button products-button">
                             <span>Заказать</span>
                             <span>
                                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none"
