--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <div class="logo"><img src="./images/Logo.png" alt="logo"></div>
             <nav class="menu">
                 <ul class="menu-list">
-                    <li class="menu-item"><a href="#">Почему у нас</a></li>
-                    <li class="menu-item"><a href="#">Меню бургеров</a></li>
-                    <li class="menu-item"><a href="#">Оформление заказов</a></li>
+                    <li class="menu-item"><a data-link="why">Почему у нас</a></li>
+                    <li class="menu-item"><a data-link="products">Меню бургеров</a></li>
+                    <li class="menu-item"><a data-link="order">Оформление заказов</a></li>
                 </ul>
             </nav>
-            <div class="currency" title="изменить валюту">$</div>
+            <div class="currency" title="изменить валюту" id="change-currency">$</div>
         </div>
     </header>
 
@@ -32,7 +32,7 @@
                     бургеров. Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.
                 </p>
                 <div class="main-action">
-                    <button class="button">Смотреть меню</button>
+                    <button class="button" id="main-action-button">Смотреть меню</button>
                 </div>
             </div>
             <img src="./images/main_burger.png" alt="burger" class="main-image">
@@ -41,7 +41,7 @@
 
 </section>
 
-<section class="why">
+<section class="why" id="why">
     <div class="container">
         <div class="common-title">Почему нас выбирают?</div>
         <div class="why-items">
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="products">
+<section class="products" id="products">
     <div class="container">
         <div class="common-title">Выберите свой бургер</div>
         <div class="products-items">
@@ -84,7 +84,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8$</div>
+                        <div class="products-item-price" data-base-price="8">8$</div>
                         <div class="products-item-weight">360 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7$</div>
+                        <div class="products-item-price" data-base-price="7">7$</div>
                         <div class="products-item-weight">390 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -160,7 +160,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">10$</div>
+                        <div class="products-item-price" data-base-price="10">10$</div>
                         <div class="products-item-weight">420 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -198,7 +198,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7$</div>
+                        <div class="products-item-price" data-base-price="7">7$</div>
                         <div class="products-item-weight">220 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -236,7 +236,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8$</div>
+                        <div class="products-item-price" data-base-price="8">8$</div>
                         <div class="products-item-weight">220 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -274,7 +274,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9$</div>
+                        <div class="products-item-price" data-base-price="9">9$</div>
                         <div class="products-item-weight">320 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -313,7 +313,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8$</div>
+                        <div class="products-item-price" data-base-price="8">8$</div>
                         <div class="products-item-weight">280 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -351,7 +351,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">7$</div>
+                        <div class="products-item-price" data-base-price="7">7$</div>
                         <div class="products-item-weight">380 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -389,7 +389,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">11$</div>
+                        <div class="products-item-price" data-base-price="11">11$</div>
                         <div class="products-item-weight">400 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -428,7 +428,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9$</div>
+                        <div class="products-item-price" data-base-price="9">9$</div>
                         <div class="products-item-weight">300 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -466,7 +466,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">8$</div>
+                        <div class="products-item-price" data-base-price="8">8$</div>
                         <div class="products-item-weight">320 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -504,7 +504,7 @@
                 </div>
                 <div class="products-item-extra">
                     <div class="products-item-info">
-                        <div class="products-item-price">9$</div>
+                        <div class="products-item-price" data-base-price="9">9$</div>
                         <div class="products-item-weight">360 гр</div>
                     </div>
                     <div class="products-item-action">
@@ -536,7 +536,7 @@
     </div>
 </section>
 
-<section class="order">
+<section class="order" id="order">
     <div class="container">
         <div class="common-title">Оформление заказа</div>
         <img src="./images/order_image.png" alt="burger" class="order-image">
@@ -546,15 +546,15 @@
             </div>
             <div class="order-form-inputs">
                 <div class="order-form-input">
-                    <input type="text" placeholder="Ваш заказ">
+                    <input type="text" placeholder="Ваш заказ" id="burger">
                 </div>
                 <div class="order-form-input">
-                    <input type="text" placeholder="Ваше имя">
+                    <input type="text" placeholder="Ваше имя" id="name">
                 </div>
                 <div class="order-form-input">
-                    <input type="text" placeholder="Ваш телефон">
+                    <input type="text" placeholder="Ваш телефон" id="phone">
                 </div>
-                <button class="button">Оформить заказ</button>
+                <button class="button" id="order-action">Оформить заказ</button>
             </div>
         </div>
     </div>
@@ -567,5 +567,6 @@
     </div>
 </footer>
 
+<script src="./scripts/script.js"></script>
 </body>
 </html>
